fixed layout bug

--- a/Home/home.css
+++ b/Home/home.css
@@ -318,6 +318,7 @@ html, body {
     width: 50%;
     display: inline-block;
     margin-bottom: 25px;
+    vertical-align: top;
 }
 #home-news .news-container a {
     display: none;
